# cameron

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
cameron/: app.py  cli.py  routes.py  state.py
cameron/assets/web/static/: package.json  pnpm-lock.yaml  tsconfig.json
cameron/assets/web/static/src/: index.ts
cameron/assets/web/templates/: index.html
cameron/services/: __init__.py  bootstrap.py  client.py  connect.py
cameron/services/embeddings/: app.py
cameron/services/generation/: app.py
cameron/services/synthesize/: app.py
cameron/services/transcribe/: app.py
tests/: test-embeddings-service.sh  test-generation-service.sh  test-recognizer-service.py  test-synthesize-service.sh
