[tool.poetry]
name = "tok715-cameron"
version = "0.1.0"
description = "monolith application for tok715/cameron artificial intelligence"
authors = ["GUO YANKE <hi@guoyk.xyz>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = 'cameron' }
]

include = [
    { path = 'cameron/assets/**/*' },
]

[tool.poetry.scripts]
tok715-cameron = 'cameron:cli'

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
starlette = "^0.32.0.post1"
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }
click = "^8.1.7"
torch = "^2.1.0"
torchaudio = "^2.1.0"
tts = "0.20.3"
sentence-transformers = "^2.2.2"
fonttools = "^4.44.0"
websockets = "^12.0"
aliyun-python-sdk-core = "^2.14.0"
optimum = "^1.14.1"
accelerate = "^0.24.1"
tiktoken = "^0.5.1"
einops = "^0.6"
scipy = "^1.11.3"
transformers-stream-generator = "0.0.4"
peft = "^0.6.2"
deepspeed = "^0.12.3"
httpx = "^0.25.1"
anyio = "^4.0.0"
auto-gptq = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
